--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -28,8 +28,8 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
                         </svg>
                     </a>
-                    <a href="#gallery" class="btn btn-outline">
-                        View Gallery
+                    <a href="#services" class="btn btn-outline">
+                        Our Services
                     </a>
                 </div>
             </div>
