fixed services button and removed gallery

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 <div class="min-h-screen">
     {{ partial "hero.html" . }}
     {{ partial "services.html" . }}
-    {{ partial "gallery.html" . }}
+    <!-- {{ partial "gallery.html" . }} -->
     {{ partial "how-it-works.html" . }}
     {{ partial "contact.html" . }}
 </div>
