--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -1,4 +1,4 @@
-<section  id="service" class="py-24 px-4 sm:px-6 lg:px-8">
+<section  id="services" class="py-24 px-4 sm:px-6 lg:px-8">
     <div class="container">
         <div class="text-center space-y-4 mb-16">
             <h2 class="text-4xl sm:text-5xl font-bold">
