--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -4,7 +4,7 @@
     <div class="container relative z-10 px-4 sm:px-6 lg:px-8">
         <div class="grid lg:grid-cols-2 gap-12 items-center">
                 <div class="flex justify-center lg:justify-start mb-6">
-                    <img src="/images/logo2.png" alt="S.A.M.S 3d printing service logo" class="w" />
+                    <img src="/images/logo2.png" alt="S.A.M.S 3d printing service logo" class="max-w-32 h-auto" />
                 </div>
                 <div class="flex justify-center lg:justify-start mb-6">
                     <img src="/images/logo.png" alt="S.A.M.S 3d printing service logo" class="w-full max-w-32 h-auto" />
